src/test/ui/const-generics/generic_const_exprs/issue-72819-generic-in-const-eval.full.stderr
error[E0308]: mismatched types
  --> $DIR/issue-72819-generic-in-const-eval.rs:20:12
   |
LL |     let x: Arr<{usize::MAX}> = Arr {};
   |            ^^^^^^^^^^^^^^^^^ expected `false`, found `true`
   |
   = note: expected type `false`
              found type `true`

error[E0308]: mismatched types
  --> $DIR/issue-72819-generic-in-const-eval.rs:20:32
   |
LL |     let x: Arr<{usize::MAX}> = Arr {};
   |                                ^^^ expected `false`, found `true`
   |
   = note: expected type `false`
              found type `true`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
